--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,5 +18,6 @@
     "tabs",
     "http://*/",
     "https://*/"
-  ]
+  ],
+  "update_url": "http://github.com/agate/Twiggy/raw/master/updates.xml"
 }
